--- a/spring-mvc/src/main/resources/templates/hola-mundo.html
+++ b/spring-mvc/src/main/resources/templates/hola-mundo.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <h1>Página Hola Mundo</h1>
+
+<p th:text="${mensaje}"></p>
+
+<p th:text="${fecha}"></p>
+
+<p th:text="${nombres}"></p>
+
 </body>
 </html>
