--- a/spring-mvc/src/main/resources/templates/product-form.html
+++ b/spring-mvc/src/main/resources/templates/product-form.html
@@ -5,13 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Formulario creación nuevo producto</h1>
+<h1 th:if="${product.id}">Editar producto <span th:text="${product.id}"></span></h1>
+<h1 th:unless="${product.id}">Crear nuevo producto</h1>
 
 <form method="POST" th:object="${product}" th:action="@{/products}">
 
     <div>
         <label for="id">ID</label>
-        <input type="number" id="id" th:field="*{id}"/>
+        <input type="number" id="id" th:field="*{id}" readonly/>
     </div>
 
     <div>
@@ -29,11 +30,12 @@
         <input type="number" id="quantity" th:field="*{quantity}" min="0" max="500" step="0"/>
     </div>
 
-    <button type="submit">Crear producto</button>
+    <button type="submit" th:if="${product.id}">Enviar cambios</button>
+    <button type="submit" th:unless="${product.id}">Enviar nuevo producto</button>
 </form>
 
 <a href="/products">Volver</a>
-<a th:href="@{/products/{id}(id=${product.id})}">Ver detalle</a>
+<a th:if="${product.id}" th:href="@{/products/{id}(id=${product.id})}">Ver detalle</a>
 
 
 </body>
